Added Final Flame card and implemented code for limiting

--- a/src/main/resources/elementalSparkResources/localization/eng/elementalSpark-Card-Strings.json
+++ b/src/main/resources/elementalSparkResources/localization/eng/elementalSpark-Card-Strings.json
@@ -31,5 +31,9 @@
   "elementalSpark:FireOfTheForge":{
     "NAME": "Fire of the Forge",
     "DESCRIPTION": "Upgrade a Random card in your hand when entering Fire"
-   }
+   },
+  "elementalSpark:FinalFlame":{
+    "NAME": "The Final Flame",
+    "DESCRIPTION": "Deal !D! Damage NL Exit element NL Prevent using Fire for 4 turns"
+  }
 }
