--- a/src/main/resources/elementalSparkResources/localization/eng/elementalSpark-Card-Strings.json
+++ b/src/main/resources/elementalSparkResources/localization/eng/elementalSpark-Card-Strings.json
@@ -1,23 +1,23 @@
 {
   "elementalSpark:ChooseAir": {
     "NAME": "Air",
-    "DESCRIPTION": "Select the Air Element"
+    "DESCRIPTION": "Select the elementalspark:Air Element"
   },
   "elementalSpark:ChooseEarth": {
     "NAME": "Earth",
-    "DESCRIPTION": "Select the Earth Element"
+    "DESCRIPTION": "Select the elementalspark:Earth Element"
   },
   "elementalSpark:ChooseFire": {
     "NAME": "Fire",
-    "DESCRIPTION": "Select the Fire Element"
+    "DESCRIPTION": "Select the elementalspark:Fire Element"
   },
   "elementalSpark:ChooseWater": {
-    "NAME": "Water",
-    "DESCRIPTION": "Select the Water Element"
+    "NAME": "elementalspark:Water",
+    "DESCRIPTION": "Select the elementalspark:Water Element"
   },
   "elementalSpark:AdaptAndStrike": {
     "NAME": "Adapt and Strike",
-    "DESCRIPTION": "Deal !D! Damage NL Gain !M! Damage changing elements while in hand"
+    "DESCRIPTION": "Deal !D! Damage NL Gain !M! Damage when changing elements while in hand"
   },
   "elementalSpark:Defend": {
     "NAME": "Defend",
@@ -25,7 +25,7 @@
   },
   "elementalSpark:EarthShield": {
     "NAME": "Earth Shield",
-    "DESCRIPTION": "Gain !B! Block. NL switches to Earth"
+    "DESCRIPTION": "Gain !B! Block. NL switches to elementalspark:Earth"
   },
   "elementalSpark:Ethereal": {
     "NAME": "Ethereal",
@@ -33,19 +33,19 @@
   },
   "elementalSpark:FinalFlame": {
     "NAME": "The Final Flame",
-    "DESCRIPTION": "Deal !D! Damage NL Exit element NL Prevent using Fire for 4 turns"
+    "DESCRIPTION": "Deal !D! Damage NL Exit element NL Prevent using elementalspark:Fire for 4 turns"
   },
   "elementalSpark:FireOfTheForge": {
     "NAME": "Fire of the Forge",
-    "DESCRIPTION": "Upgrade a Random card in your hand when entering Fire"
+    "DESCRIPTION": "Upgrade a Random card in your hand when entering elementalspark:Fire"
   },
   "elementalSpark:FlowIn": {
     "NAME": "Flow In",
-    "DESCRIPTION": "Draw a card from your draw pile NL switches to Water"
+    "DESCRIPTION": "Draw a card from your draw pile NL switches to elementalspark:Water"
   },
   "elementalSpark:FlyLikeAButterfly": {
     "NAME": "Fly like a Butterfly",
-    "DESCRIPTION": "3% chance to dodge incoming attacks while in the Air element"
+    "DESCRIPTION": "3% chance to dodge incoming attacks while in the elementalspark:Air element"
   },
   "elementalSpark:Harden": {
     "NAME": "Harden",
@@ -54,23 +54,23 @@
   },
   "elementalSpark:HeatWave": {
     "NAME": "Heat wave",
-    "DESCRIPTION": "Deal !D! Damage to all enemies NL switches to Fire"
+    "DESCRIPTION": "Deal !D! Damage to all enemies NL switches to elementalspark:Fire"
   },
   "elementalSpark:LaminarFlow":{
     "NAME": "Laminar Flow",
-    "DESCRIPTION": "Move all cards from the discard to the draw pile. NL Chose future draw order. NL Prevent using Water for 4 turns"
+    "DESCRIPTION": "Move all cards from the discard to the draw pile. NL Chose future draw order. NL Prevent using elementalspark:Water for 4 turns"
   },
   "elementalSpark:Levitate": {
     "NAME": "Levitate",
-    "DESCRIPTION": "Draw a random card from your discard pile NL switches to Air"
+    "DESCRIPTION": "Draw a random card from your discard pile NL switches to elementalspark:Air"
   },
   "elementalSpark:LightUp": {
     "NAME": "Light up",
-    "DESCRIPTION": "Deal !D! Damage NL switches to Fire"
+    "DESCRIPTION": "Deal !D! Damage NL switches to elementalspark:Fire"
   },
   "elementalSpark:Parasite": {
     "NAME": "Parasite",
-    "DESCRIPTION": "Steal an enemies block NL switches to Earth"
+    "DESCRIPTION": "Steal an enemies block NL switches to elementalspark:Earth"
   },
   "elementalSpark:RockThrow": {
     "NAME": "Rock throw",
@@ -82,16 +82,20 @@
   },
   "elementalSpark:Splash": {
     "NAME": "Splash",
-    "DESCRIPTION": "Deal !D! Damage NL Draw from your discard pile when entering Water element"
+    "DESCRIPTION": "Deal !D! Damage NL Draw from your discard pile when entering elementalspark:Water element"
   },
   "elementalSpark:StandingWater": {
     "NAME": "Standing Water",
-    "DESCRIPTION": "Retain !M! card in your inventory if finishing the turn in the Water element."
+    "DESCRIPTION": "Retain !M! card in your inventory if finishing the turn in the elementalspark:Water element."
   },
   "elementalSpark:SuddenWind": {
     "NAME": "Sudden Wind",
-    "DESCRIPTION": "Autoplay NL Switch to Air, gain [W]",
-    "UPGRADE_DESCRIPTION": "Autoplay NL Switch to Air, gain [W] [W]"
+    "DESCRIPTION": "Autoplay NL Switch to elementalspark:Air, gain [W]",
+    "UPGRADE_DESCRIPTION": "Autoplay NL Switch to elementalspark:Air, gain [W] [W]"
+  },
+  "elementalSpark:ReactiveStrike": {
+    "NAME": "Reactive Strike",
+    "DESCRIPTION": "Deal !D! Damage NL If the enemy intend on attacking, switch to elementalspark:Earth. NL otherwise switch to elementalspark:Fire"
   },
   "elementalSpark:VolatileSpark": {
     "NAME": "Volatile Spark",
