--- a/src/main/resources/elementalSparkResources/localization/eng/elementalSpark-Card-Strings.json
+++ b/src/main/resources/elementalSparkResources/localization/eng/elementalSpark-Card-Strings.json
@@ -23,6 +23,10 @@
     "NAME": "Defend",
     "DESCRIPTION": "Gain !B! Block."
   },
+  "elementalSpark:Destabilize": {
+    "NAME": "Destabilize",
+    "DESCRIPTION": "Change enemy intended action"
+  },
   "elementalSpark:EarthShield": {
     "NAME": "Earth Shield",
     "DESCRIPTION": "Gain !B! Block. NL switches to elementalspark:Earth"
