Added UntamedFire Relic

--- a/src/main/resources/elementalSparkResources/localization/eng/elementalSpark-Keyword-Strings.json
+++ b/src/main/resources/elementalSparkResources/localization/eng/elementalSpark-Keyword-Strings.json
@@ -52,8 +52,12 @@
       "waterlock"
     ],
     "DESCRIPTION" : "Card can only be played while in the Water element"
+  },
+  {
+    "NAMES":[
+      "burned"
+    ],
+    "DESCRIPTION": "Receive more damage from attacks for each stack of burned applied."
   }
-
-
 
 ]
